table issue from TK fixed
Rows were too tall.

--- a/app/modules/core/domainManagement/_domainManagement.scss
+++ b/app/modules/core/domainManagement/_domainManagement.scss
@@ -14,9 +14,13 @@
       }
       tr {
         border: none;
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
         td {
           padding-left: 0;
           color: $gray-dark-2;
+          padding-top: 0 !important;
+          padding-bottom: 0 !important;
 
           .icon {
             margin-right: 0.5rem;
